draft 3 journey finished

--- a/app/views/drafts-gui/draft-3_pt-2.html
+++ b/app/views/drafts-gui/draft-3_pt-2.html
@@ -114,7 +114,7 @@
             </li>
             <li class="opss-task-sub">
                 <h3 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Multi-items
+                    <span class="app-task-list__section-number">4. </span> Multi-item details
                 </h3>
 
                 <ul class="app-task-list__items opss-task-sub__list">
@@ -142,18 +142,32 @@
                 </ul>
 
             </li>
-            <li>
+            <li class="opss-task-sub">
                 <h2 class="app-task-list__section">
                     <span class="app-task-list__section-number">5. </span> Category and formation
                 </h2>
 
-                <ul class="app-task-list__items">
+                <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Category and formation
+                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 1
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-details-status">Cannot start yet</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-01-status">Cannot start yet</b>
+                    </li>
+                    <li class="app-task-list__item">
+                        <span class="app-task-list__task-name">
+                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 2
+                        </span>
+
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-02-status">Cannot start yet</b>
+                    </li>
+                    <li class="app-task-list__item">
+                        <span class="app-task-list__task-name">
+                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 3
+                        </span>
+
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-03-status">Cannot start yet</b>
                     </li>
                 </ul>
             </li>
