--- a/app/views/drafts-gui/draft-3_pt-5a.html
+++ b/app/views/drafts-gui/draft-3_pt-5a.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "draft-3_pt-4"
+        href: "draft-3_pt-5"
     }) }}
 {% endblock %}
 
@@ -123,15 +123,15 @@
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
                             <a href="draft-3_step-5a.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-01-status">
-                                Multi-item 1
+                                Morbi ultricies
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="item-01-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="item-01-status">Completed</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
+                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
                                 Multi-item 2
                             </a>
                         </span>
@@ -140,7 +140,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
+                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
                                 Multi-item 3
                             </a>
                         </span>
@@ -169,7 +169,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 1
+                            <span class="govuk-visually-hidden">Categorise</span> Morbi ultricies
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-01-status">Cannot start yet</b>
