--- a/app/views/drafts-gui/draft-3_pt-5b.html
+++ b/app/views/drafts-gui/draft-3_pt-5b.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "draft-3_pt-4"
+        href: "draft-3_pt-5"
     }) }}
 {% endblock %}
 
@@ -20,7 +20,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 3 of 6 sections have been completed.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 4 of 6 sections have been completed.
         </p>
 
         <ol class="app-task-list">
@@ -123,29 +123,29 @@
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
                             <a href="draft-3_step-5a.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-01-status">
-                                Multi-item 1
+                                Morbi ultricies
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="item-01-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="item-01-status">Completed</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
-                                Multi-item 2
+                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
+                                Nullam gravida
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="item-02-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="item-02-status">Completed</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
-                                Multi-item 3
+                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
+                                Maecenas
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="item-03-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="item-03-status">Completed</b>
                     </li>
                     <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
@@ -169,21 +169,23 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 1
+                            <a href="draft-3_step-6.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-01-status">
+                                <span class="govuk-visually-hidden">Categorise</span> Morbi ultricies
+                            </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-01-status">Cannot start yet</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-01-status">Not started</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 2
+                            <span class="govuk-visually-hidden">Categorise</span> Nullam gravida
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-02-status">Cannot start yet</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <span class="govuk-visually-hidden">Categorise</span> Multi-item 3
+                            <span class="govuk-visually-hidden">Categorise</span> Maecenas
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-03-status">Cannot start yet</b>
