--- a/app/views/drafts-gui/draft-3_step-1.html
+++ b/app/views/drafts-gui/draft-3_step-1.html
@@ -3,8 +3,30 @@
         {% include "drafts-gui/inc_opss-link-pg-css.html" %}
     </head>
     <body>
-        <p>The user completes this task and states that <b>4x nanomaterials</b> are used in this <b>multi-item</b> product (with 3x items) <a href="draft-3_pt-2.html">returns</a> to the drafts page.</p>
+        <p>The user completes this task and states that 4x different nanomaterials are used and that this is a multi-item product with 3x items.</p>
 
-        <p>Note that 'Product details' gets replaced with 'Multi-item kit' and 'Multi-items'.</p>
+        <ul>
+            <li>The nanomaterials section will now feature a list of 4</li>
+            <li>Each will feature a holding name (until their tasks are completed)</li>
+            <li>Each naomaterial task has a status of 'Not started'</li>
+            <li>Add/Remove links for the nanomaterials section are also added</li>
+        </ul>
+
+        <hr>
+
+        <p>Returning to the drafts page, other section details will also have changed:</p>
+
+        <ul>
+            <li>The 'Product details' task(s) title has changed to 'Multi-item kit'</li>
+            <li>and a new section inserted: Multi-item details</li>
+            <li>The 'Category and formation' section has also changed to now list the same number of items (with the same holding titles); they are now linked</li>
+            <li>Add/Remove links for the 'Multi-item details' section are also added</li>
+            <li>Note the hidden HTML in the new 'Category and formation' text items: <code><span class="govuk-visually-hidden">Categorise</span></code></li>
+        </ul>
+
+        <hr>
+        <p>On completion of the task, the user <a href="draft-3_pt-2.html">returns</a> to the drafts page.</p>
+
+
     </body>
 </html>
