--- a/app/views/drafts-gui/draft-3_step-3.html
+++ b/app/views/drafts-gui/draft-3_step-3.html
@@ -5,7 +5,10 @@
     <body>
         <p>The user completes the Nanomaterials task (completing its details, including its name).</p>
 
-        <p>At the end of the Nanomaterials task/journey, the user flow offers the option to continue straight onto the next one (if there is another) or return back to the draft page.</p>
+        <ul>
+            <li>When following the Nanomaterials task journey, we add the item title to the H1 title of each page (starting with its holding title)</li>
+            <li>At the end of the Nanomaterials task/journey, the user flow offers the option to continue straight onto the next one (if there is another) or return back to the draft page</li>
+        </ul>
 
         <p>For this click-through demo, we assume that all nanomaterials have been completed, when the user <a href="draft-3_pt-4.html">returns</a> to the drafts page.</p>
     </body>
