--- a/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
+++ b/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
@@ -19,7 +19,7 @@
                 </p>
 
                 <p class="govuk-body-s">
-                    Completing the first task may update the list with additional tasks.
+                    Completing the first task can change the list and the number of tasks.
                 </p>
 
                 <p class="govuk-body-s">
