--- a/app/views/drafts-gui/draft-3_pt-3.html
+++ b/app/views/drafts-gui/draft-3_pt-3.html
@@ -114,7 +114,7 @@
             </li>
             <li class="opss-task-sub">
                 <h3 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Multi-items
+                    <span class="app-task-list__section-number">4. </span> Multi-item details
                 </h3>
 
                 <ul class="app-task-list__items opss-task-sub__list">
