--- a/app/views/drafts-gui/draft-1_pt-3.html
+++ b/app/views/drafts-gui/draft-1_pt-3.html
@@ -16,9 +16,9 @@
 {% include "drafts-gui/inc_opss-header-section.html" %}
 
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
+    <section class="govuk-grid-column-three-quarters govuk-!-padding-top-9" role="region" aria-label="Tasks">
 
-        <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
+        <p class="govuk-body govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
             <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 2 of 4 sections have been completed.
         </p>
 
@@ -93,6 +93,11 @@
 
 
     </section>
+    <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9">
+        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View draft
+        </a>
+    </div>
 </div>
 
 
