--- a/app/views/drafts-gui/draft-3_pt-6.html
+++ b/app/views/drafts-gui/draft-3_pt-6.html
@@ -17,9 +17,9 @@
 {% include "drafts-gui/inc_opss-header-section.html" %}
 
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
+    <section class="govuk-grid-column-three-quarters govuk-!-padding-top-9" role="region" aria-label="Tasks">
 
-        <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
+        <p class="govuk-body govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
             <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 5 of 6 sections have been completed.
         </p>
 
@@ -49,7 +49,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
                                 Consectetur adipiscing
                             </a>
                         </span>
@@ -58,7 +58,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
                                 Phasellus
                             </a>
                         </span>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
                                 Pellentesque
                             </a>
                         </span>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-3.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-04-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-04-status">
                                 Proin rutrum odio
                             </a>
                         </span>
@@ -105,7 +105,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-4.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="multi-item-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="multi-item-status">
                                 Multi-item kit
                             </a>
                         </span>
@@ -122,7 +122,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5a.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-01-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-01-status">
                                 Morbi ultricies
                             </a>
                         </span>
@@ -131,7 +131,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-02-status">
                                 Nullam gravida
                             </a>
                         </span>
@@ -140,7 +140,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-5b.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="item-03-status">
                                 Maecenas
                             </a>
                         </span>
@@ -169,7 +169,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-6.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-01-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-01-status">
                                 <span class="govuk-visually-hidden">Categorise</span> Morbi ultricies
                             </a>
                         </span>
@@ -178,7 +178,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-6.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-02-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-02-status">
                                 <span class="govuk-visually-hidden">Categorise</span> Nullam gravida
                             </a>
                         </span>
@@ -187,7 +187,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-3_step-6.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-03-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-03-status">
                                 <span class="govuk-visually-hidden">Categorise</span> Maecenas
                             </a>
                         </span>
@@ -217,6 +217,11 @@
 
 
     </section>
+    <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9">
+        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View draft
+        </a>
+    </div>
 </div>
 
 
