--- a/app/views/drafts-gui/draft-3_step-1.html
+++ b/app/views/drafts-gui/draft-3_step-1.html
@@ -25,7 +25,15 @@
         </ul>
 
         <hr>
-        <p>On completion of the task, the user <a href="draft-3_pt-2.html">returns</a> to the drafts page.</p>
+
+        <ul>
+            <li>On completion of the task (which includes providing the product name) - when the user returns to the draft page - the main page title will update to 'Product draft for:
+Lorem ipsum' (with an extra HTML span)</li>
+            <li>The text in the associated hint text also changes: "add a cosmetic product" becomes "add <em>the</em> cosmetic product"</li>
+        </ul>
+
+        <hr>
+        <p>On completion of the task, the user <a href="draft-3_pt-2.html">returns</a> to the draft page.</p>
 
 
     </body>
