--- a/app/views/drafts-gui/draft-3_step-5b.html
+++ b/app/views/drafts-gui/draft-3_step-5b.html
@@ -3,7 +3,7 @@
         {% include "drafts-gui/inc_opss-link-pg-css.html" %}
     </head>
     <body>
-        <p>The user completes this task, which includes providing a name - for the item in the multi-item kit - and follows the &quot;Complete Product&quot;/Categorise task journey.</p>
+        <p>The user completes this task, which includes providing a name<sup>*</sup> - for the item in the multi-item kit - and follows the &quot;Complete Product&quot;/Categorise task journey.</p>
 
 
 
@@ -18,6 +18,8 @@
             <li>When following the items task journey, we add the item title to the H1 title of each page (starting with its holding title)</li>
             <li>When returning to the draft page, the corresponding task in the 'Category and formation' section has updated its name. (The two are linked). The first item link demonstrates this.</li>
         </ul>
+
+        <p><sup>*</sup> The "what is the item's name" page only appears at the start of the Complete items journey if the status of the product is a multi-item kit. Otherwise the new 'Select the nanomaterials' page is the starting page of the task.</p>
 
         <hr>
         <p>For this click-through demo we assume that all 'Multi-item details' tasks have been completed.</p>
