--- a/app/views/drafts-gui/inc_opss-header-section-landing.html
+++ b/app/views/drafts-gui/inc_opss-header-section-landing.html
@@ -6,11 +6,11 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cos-prod-hint">
-                       <span class="govuk-caption-m">Product draft for: </span> Lorem ipsum dolor
+                        Add a cosmetic product
                     </h1>
 
                     <p class="govuk-body opss-secondary-text">
-                        Complete the following tasks to add this cosmetic product.
+                        Complete the following tasks to add a cosmetic product.
                     </p>
 
                     {% include "drafts-gui/inc_opss-add-cosmetics-hint.html" %}
@@ -26,4 +26,3 @@
 
     </div>
 </div>
-
