--- a/app/views/create-cases-add-products/upload-a-product-image-with-imgs.html
+++ b/app/views/create-cases-add-products/upload-a-product-image-with-imgs.html
@@ -35,7 +35,7 @@
                             Do not upload case images related to damage or incidents.
                         </p>
                         <p class="govuk-body-s">
-                            In addition to general product images try to add images of key details, such as plugs on electrical products or safety information on packaging.
+                            In addition to general product images try to add images of key details, such as plugs on electrical products or safety informations on packaging.
                         </p>
                     </div>
                 </details>
