--- a/app/views/drafts-gui/add-item-step.html
+++ b/app/views/drafts-gui/add-item-step.html
@@ -31,7 +31,7 @@
 
 
 
-        <p><a href="#" onclick="history.go(-1);return false;">Return</a> to previous draft state (or use your back button).</p>
+        <p><a href="#" onclick="history.go(-1);return false;">Return</a> to previous draft state.</p>
 
     </body>
 </html>
