--- a/app/views/drafts-gui/draft-1_step-1.html
+++ b/app/views/drafts-gui/draft-1_step-1.html
@@ -3,6 +3,16 @@
         {% include "drafts-gui/inc_opss-link-pg-css.html" %}
     </head>
     <body>
+
+        <ul>
+            <li>On completion of the task (which includes providing the product name) - when the user returns to the draft page - the main page title will update to 'Product draft for:
+Lorem ipsum' (with an extra HTML span)</li>
+            <li>The text in the associated hint text also changes: "add a cosmetic product" becomes "add <em>the</em> cosmetic product"</li>
+        </ul>
+
+        <hr>
+
         <p>The user completes this task and <a href="draft-1_pt-2.html">returns</a> to the drafts page.</p>
+
     </body>
 </html>
