--- a/app/views/drafts-gui/draft-2_pt-3.html
+++ b/app/views/drafts-gui/draft-2_pt-3.html
@@ -16,9 +16,9 @@
 {% include "drafts-gui/inc_opss-header-section.html" %}
 
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
+    <section class="govuk-grid-column-three-quarters govuk-!-padding-top-9" role="region" aria-label="Tasks">
 
-        <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
+        <p class="govuk-body govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
             <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 2 of 5 sections have been completed.
         </p>
 
@@ -48,7 +48,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
                                 Consectetur adipiscing
                             </a>
                         </span>
@@ -57,7 +57,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
                                 Phasellus
                             </a>
                         </span>
@@ -66,7 +66,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
                                 Pellentesque
                             </a>
                         </span>
@@ -138,6 +138,11 @@
 
 
     </section>
+    <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9">
+        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View draft
+        </a>
+    </div>
 </div>
 
 
