--- a/app/views/drafts-gui/draft-3_pt-1.html
+++ b/app/views/drafts-gui/draft-3_pt-1.html
@@ -14,12 +14,12 @@
 
 {% block content %}
 
-{% include "drafts-gui/inc_opss-header-section.html" %}
+{% include "drafts-gui/inc_opss-header-section-landing.html" %}
 
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
+    <section class="govuk-grid-column-three-quarters govuk-!-padding-top-9" role="region" aria-label="Tasks">
 
-        <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
+        <p class="govuk-body govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
             <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 0 of 4 sections have been completed.
         </p>
 
