--- a/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
+++ b/app/views/drafts-gui/inc_opss-add-cosmetics-hint.html
@@ -1,6 +1,3 @@
-        <p class="govuk-body opss-secondary-text">
-            Complete the following tasks to add a cosmetic product.
-        </p>
         <!--p class="govuk-body opss-secondary-text">
             <span class="govuk-!-display-block govuk-!-margin-bottom-4">Complete the following tasks to add a cosmetic product. Completing the first task may update the task list with additional tasks. </span>
 
@@ -19,7 +16,7 @@
                 </p>
 
                 <p class="govuk-body-s">
-                    Completing the first task can change the list and the number of tasks.
+                    Completing the first task may change the list and the number of tasks.
                 </p>
 
                 <p class="govuk-body-s">
