--- a/app/views/drafts-gui/index.html
+++ b/app/views/drafts-gui/index.html
@@ -36,6 +36,10 @@
 
             <li>Add a product (with with 4x nanomaterials as a multi-item kit - featuring 3x items).<br><a href="draft-3_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 3</a></li>
 
+            <li>Blocked page (You cannot notify this product until you have notified <em>the</em> nanomaterial).<br><a href="blocked-01" class="govuk-link govuk-link--no-visited-state" target="_blank">Blocked 1</a></li>
+
+            <li>Blocked page (You cannot notify products containing <em>this</em> nanomaterial).<br><a href="blocked-02" class="govuk-link govuk-link--no-visited-state" target="_blank">Blocked 2</a></li>
+
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
